k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  selector:
    app: result
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
