k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  selector:
    app: vote
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
