k8s-specifications/result-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: result
spec:
  to:
    kind: Service
    name: result
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
